<resources>
    <string name="app_name">Crowding</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_list">List</string>

    <!--    Button lables -->
    <string name="btn_fetch">Fetch</string>

    <!--    Status labels-->
    <string name="sts_waiting">Waitng...</string>
    <string name="title_add">Add</string>
    <string name="sts_fetched">Fetched</string>
    <string name="sts_error">ERROR</string>
    <string name="sts_fetching">Fetching...</string>
    <string name="event_title">Event Title</string>
    <string name="longitude">Longitude</string>
    <string name="event_date">Event Date</string>
    <string name="latitude">Latitude</string>
    <string name="event_description">Event Description</string>
    <string name="event_slots">Slots</string>
    <string name="create_event">Create Event</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_login">Login</string>
    <string name="provide_credentials">Please provide username and password</string>
    <string name="do_not_have_account">You do not have an account?</string>
    <string name="register">register</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="login_successed">Login Successed</string>
    <string name="logged_out">Logged Out</string>
    <string name="registered_successed">Registered</string>
    <string name="different_passwords">Provided passwords are different</string>
    <string name="login_taken">Login taken</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="event_created">Event Created</string>
    <string name="login_required">Login Required</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit">Edit</string>
    <string name="prompt_logout">Logout</string>
    <string name="blank">Blank</string>
    <string name="details">Details</string>
    <string name="numberOfNumberPattern">%1$d / %2$d</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_create_event">Create Event</string>
    <string name="title_profile">Your Profile</string>
    <string name="title_event_details">Event Details</string>
    <string name="title_date">Date</string>
    <string name="title_organizer">Organizer</string>
    <string name="title_participants">Participants</string>
    <string name="empty">Empty</string>
    <string name="title_slots">Slots</string>
    <string name="title_location">Location</string>
    <string name="title_description">Description</string>
    <string name="signed_in">Signed in</string>
    <string name="cannotSignIn">Cannot Sign In</string>
    <string name="action_sign_out">Sign out</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="signed_out">Signed Out</string>
    <string name="save">Save</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="new_user_details">New User Details</string>
    <string name="edited">Edited</string>
    <string name="my_events">My events</string>
    <string name="login_fragment_tag">LOGIN_TAG</string>
    <string name="home_fragment_tag">HOME_TAG</string>
    <string name="user_profile_fragment_tag">USER_PROFILE_TAG</string>
    <string name="create_event_fragment_tag">CREATE_EVENT_TAG</string>
    <string name="event_list_fragment_tag">EVENT_LIST_TAG</string>
    <string name="my_events_fragment_tag">MY_EVENTS_TAG</string>
    <string name="event_details_fragment_tag">EVENT_DETAILS_TAG</string>
    <string name="register_fragment_tag">REGISTER_TAG</string>
    <string name="edit_profile_fragment_tag">EDIT_PROFILE_TAG</string>
    <string name="users">Users</string>
    <string name="profile_of_pattern">%1$s\'s Profile</string>
    <string name="username">Username</string>
    <string name="role_user">user</string>
    <string name="role_admin">admin</string>
    <string name="forbidden">Forbidden</string>
    <string name="users_list_fragment_tag">USERS_LIST_TAG</string>
    <string name="active">Active</string>
    <string name="show_on_map">Show on map</string>
    <string name="percentage_reached">%1$s %% slots taken! Prepare to the event!</string>
    <string name="percentage_not_reached">Only %1$s%% slots taken! We have to reach at least 75%% to get the event started.</string>
    <string name="ascii_list_elem">"• %1$s"</string>
    <string name="password_too_short">Password should consist of at least 8 characters</string>
    <string name="users_management">Users Management</string>
</resources>