<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_event_list_fragment"
        android:icon="@drawable/ic_list_foreground"
        android:title="@string/title_list" />


    <item
        android:id="@+id/navigation_create_event_fragment"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/title_add"
        />

    <item
        android:id="@+id/navigation_login_fragment"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/prompt_login" />

</menu>